--- a/src/components/_rows/TrackRow/TrackRow.module.scss
+++ b/src/components/_rows/TrackRow/TrackRow.module.scss
@@ -16,6 +16,7 @@
   }
 
   .left {
+    padding: 0.5rem 0;
     overflow: hidden;
 
     .name {
